--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tic-tac-toe</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <div class=" heading"><h1>TIC-TAC-TOE</h1></div> 
-  <div class="body">  <div class="container">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="heading"><h1>TIC-TAC-TOE</h1></div>
+    <div class="body">
+      <div class="container">
         <button class="toe"></button>
         <button class="toe"></button>
         <button class="toe"></button>
@@ -18,8 +19,9 @@
         <button class="toe"></button>
         <button class="toe"></button>
         <button class="toe"></button>
-    </div></div>
-    <div class = "reset-button"><button class="reset">reset game</button></div>
-    <script src="script.js" ></script>
-</body>
+      </div>
+    </div>
+    <div class="reset-button"><button class="reset">reset game</button></div>
+    <script src="script.js"></script>
+  </body>
 </html>
